# GPU-Out-of-Core-Volume-Data

./: .gitignore  README.md  bench.sh
Applications/: CMakeLists.txt
Applications/DVR-ray-caster/: CMakeLists.txt
Applications/DVR-ray-caster/include/: Application.hpp  Camera.hpp  Display_helper.hpp  LogCategories.hpp  RayCasters_helpers.hpp  Shader.hpp  TransferFunction.hpp  VolumeRayCaster.hpp
Applications/DVR-ray-caster/include/SDL2/: SDLConstext.hpp  SDLGLWindow.hpp  SDLHelper.hpp
Applications/DVR-ray-caster/include/imgui/: imconfig.h
Applications/DVR-ray-caster/src/: Application.cu  CMakeLists.txt  Camera.cpp  Display_helper.cpp  RayCasters.cu  TransferFunction.cpp  VolumeRayCaster.cu  main.cpp
Applications/DVR-ray-caster/src/SDL2/: SDLContext.cpp  SDLGLWindow.cpp  SDLHelper.cpp
Applications/DVR-ray-caster/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl_gl3.cpp
GcCore/: .gitignore  .gitlab-ci.yml  readme.md
GcCore/dependencies/: CMakeLists.txt  __package__-config.cmake.in  lz4.cmake
GcCore/dependencies/cmake/: lz4-config.cmake  lz4-targets.cmake
GcCore/dependencies/lz4-1.8.1/lib/: liblz4.so.1  liblz4.so.1.8.1
GcCore/doc/: Doxyfile  manuel_dev.docx
GcCore/doc/doxygen/html/: _abstract_file_8cpp.html  _abstract_file_8hpp.html  _abstract_file_8hpp_source.html  _abstract_task_8hpp.html  _abstract_task_8hpp_source.html  _accept_task_8cpp.html  _accept_task_8hpp.html  _accept_task_8hpp_source.html  _base64_8hpp.html  _base64_8hpp_source.html  _brick_8cpp.html  _brick_8hpp.html  _brick_8hpp_source.html  _brick_key_8cpp.html  _brick_key_8cpp.js  _brick_key_8hpp.html  _brick_key_8hpp.js  _brick_key_8hpp_source.html  _brick_processor_8hpp.html  _brick_processor_8hpp.js  _brick_processor_8hpp_source.html  _brick_processor_predicate_8hpp.html  _brick_processor_predicate_8hpp_source.html  _bricker_8cpp.html  _bricker_8cpp.js  _bricker_8hpp.html  _bricker_8hpp_source.html  _bricker__v2_8cpp.html  _bricker__v2_8cpp.js  _bricker__v2_8hpp.html  _bricker__v2_8hpp.js  _bricker__v2_8hpp_source.html  _bricks_manager_8cpp.html  _bricks_manager_8hpp.html  _bricks_manager_8hpp_source.html  _cache_configuration_8hpp.html  _cache_configuration_8hpp_source.html  _cache_device_8hpp.html  _cache_device_8hpp.js  _cache_device_8hpp_source.html  (+1249 more)
GcCore/include/GcCore/libCommon/: AbstractTask.hpp  CppNorm.hpp  FileSystem.hpp  KernelObject.hpp  LRUCache.hpp  MPMCBoundedQueue.hpp  Memory.hpp  NonCopyable.hpp  Operator.hpp  Scheduler.hpp  Singleton.hpp  ThreadPool.hpp
GcCore/include/GcCore/libData/: AbstractFile.hpp  Brick.hpp  BrickKey.hpp  BricksManager.hpp  CacheConfiguration.hpp  Configuration.hpp  ConfigurationPolicies.hpp  FileFactory.hpp  FilesManager.hpp  GISFile.hpp  GISStackFile.hpp  MetaData.hpp  RAWFile.hpp  VolumeConfiguration.hpp
GcCore/include/GcCore/libMath/: Base64.hpp  MathUtils.hpp  Matrix4.hpp  Quad.hpp  Sha1.hpp  Vector.hpp
GcCore/include/GcCore/libNetwork/: Client.hpp  ClientManager.hpp  Message.hpp  MessageBoundingBox.hpp  MessageCamera.hpp  MessageConfiguration.hpp  MessageFactory.hpp  MessageH264Chunks.hpp  MessageHandler.hpp  MessageTask.hpp  MessageTransferFunction.hpp  Socket.hpp  SocketNorm.hpp  TcpServer.hpp  TcpTrait.hpp  UdpTrait.hpp  (+2 more)
GcCore/src/: CMakeLists.txt
GcCore/src/cuda/libCommon/: CMakeLists.txt
GcCore/src/cuda/libGPUCache/: CMakeLists.txt  CacheManagerKernels.cu  dummy.cpp
GcCore/src/cuda/libPreprocessor/: CMakeLists.txt  Mipmapper.cu
GcCore/src/libCommon/: CMakeLists.txt  FileSystem.cpp  LogCategory.cpp  LogMessage.cpp  LogWriter.cpp  Logger.cpp  LoggerFormatterFileStd.cpp  Scheduler.cpp  ThreadPoll.cpp
GcCore/src/libData/: AbstractFile.cpp  Brick.cpp  BrickKey.cpp  BricksManager.cpp  CMakeLists.txt  Configuration.cpp  ConfigurationPolicies.cpp  FileFactory.cpp  FilesManager.cpp  GISFile.cpp  GISStackFile.cpp  MetaData.cpp  RAWFile.cpp  VolumeConfiguration.cpp
GcCore/src/libMath/: CMakeLists.txt  Quad.cpp
GcCore/src/libNetwork/: CMakeLists.txt  Client.cpp  ClientManager.cpp  Message.cpp  MessageBoundingBox.cpp  MessageCamera.cpp  MessageConfiguration.cpp  MessageFactory.cpp  MessageH264Chunks.cpp  MessageHandler.cpp  MessageTask.cpp  MessageTransferFunction.cpp  TcpServer.cpp  TcpTrait.cpp  UdpTrait.cpp  WinNetwork.cpp
GcCore/src/libPreprocessor/: Bricker_v2.cpp  CMakeLists.txt
GcCore/src/libPython/: CMakeLists.txt  Py_Bricker.cpp  Py_Logger.cpp  Py_Mipmapper.cpp
GcCore/src/libTinyXml/: CMakeLists.txt  tinyxml2.cpp
GcCore/win_project/: GcCore.sln  open_solution_sm35.bat  open_solution_sm50.bat
GcCore/win_project/libCommon/: libCommon.vcxproj  libCommon.vcxproj.filters
GcCore/win_project/libData/: libData.vcxproj  libData.vcxproj.filters
GcCore/win_project/libGraphics/: libGraphics.vcxproj  libGraphics.vcxproj.filters
GcCore/win_project/libMath/: libMath.vcxproj  libMath.vcxproj.filters
GcCore/win_project/libNetwork/: libNetwork.vcxproj  libNetwork.vcxproj.filters
GcCore/win_project/libPreprocessor/: libPreprocessor.vcxproj  libPreprocessor.vcxproj.filters
GcCore/win_project/libPython/: libPython.vcxproj  libPython.vcxproj.filters
GcCore/win_project/libTinyXml/: libTinyXml.vcxproj  libTinyXml.vcxproj.filters
GcCore/win_project/libcudaCommon/: libcudaCommon.vcxproj  libcudaCommon.vcxproj.filters
GcCore/win_project/libcudaGPUCache/: libcudaGPUCache.vcxproj  libcudaGPUCache.vcxproj.filters
GcCore/win_project/libcudaGraphics/: libcudaGraphics.vcxproj  libcudaGraphics.vcxproj.filters
GcCore/win_project/libcudaPreprocessor/: libcudaPreprocessor.vcxproj  libcudaPreprocessor.vcxproj.filters
assets/: colorSquare.raw
assets/Transfer_functions/: TF1  TF2  TF3  TF4  histo_big_brain_1  histo_big_brain_2  mandelbulb_1  mandelbulb_2
assets/lut/: 12band.lut  24to8.lut  autumn.lut  blue.lut  cyan.lut  earth.lut  geog.lut  green.lut  hot.lut  inverse.lut  magenta.lut  mylut.lut  random.lut  red.lut  setcol.lut  stereo1.lut  stereo2.lut  stereo3.lut  therm.lut  thermo1.lut  thermo2.lut  thermo3.lut  yellow.lut
assets/shaders/: shader.fs  shader.vs
config/: config_skull.cfg
(+203 files in other folders)
